// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`edit operations → serialized YAML > add-scope with a repeat creates a new sibling series, not a bare instance 1`] = `
"---
title: Test series
instances:
  - date: 2026-07-03
    repeat:
      type: schedule
      freq: monthly
      interval: 1
      byweekday:
        - fr
      bysetpos: 1
  - date: 2026-07-10
    repeat:
      type: schedule
      freq: monthly
      interval: 1
      byweekday:
        - fr
      bysetpos: 2
---"
`;

exports[`edit operations → serialized YAML > adding a new occurrence to an irregular-instances file keeps shared defaults 1`] = `
"---
defaults:
  duration: 1h
title: Project Review
tags:
  - work
instances:
  - date: 2026-04-15
    time: 10:00
  - date: 2026-05-20
    time: 10:00
  - date: 2026-06-18
    time: 10:00
  - date: 2026-07-10
    time: 10:00
---"
`;

exports[`edit operations → serialized YAML > all-scope edit on an event series preserves the absence of done 1`] = `
"---
defaults:
  duration: 1h
title: Team Meeting (renamed)
tags:
  - work
date: 2026-05-01
time: 14:00
repeat:
  type: schedule
  freq: weekly
  byweekday:
    - th
instances:
  - date: 2026-05-01
    time: 14:00
    done: true
---"
`;

exports[`edit operations → serialized YAML > all-scope edit updates the whole series 1`] = `
"---
defaults:
  done: false
  duration: 45m
title: Team Standup
tags:
  - work
date: 2026-04-06
time: 09:00
repeat:
  type: schedule
  freq: weekly
  byweekday:
    - mo
instances:
  - date: 2026-04-13
    done: true
    duration: 30m
  - date: 2026-04-14
    done: true
    duration: 30m
---

Quick sync. Agenda:
- [[project-alpha]] status
- Blockers
- [[weekly-log]] updates"
`;

exports[`edit operations → serialized YAML > creating a new standalone task serializes to a single file 1`] = `
"---
title: Buy groceries
tags:
  - errand
done: false
priority: medium
date: 2026-06-05
---

Milk, eggs, bread"
`;

exports[`edit operations → serialized YAML > deleteFollowing caps the series end before the occurrence 1`] = `
"---
defaults:
  done: false
  duration: 30m
title: Weekly Standup
tags:
  - work
date: 2026-04-06
time: 09:00
repeat:
  type: schedule
  freq: weekly
  byweekday:
    - mo
  end:
    type: until
    date: 2026-04-19
instances:
  - date: 2026-04-13
    done: true
  - date: 2026-04-14
    done: true
---

Quick sync. Agenda:
- [[project-alpha]] status
- Blockers
- [[weekly-log]] updates"
`;

exports[`edit operations → serialized YAML > excludeOccurrence drops a single generated occurrence 1`] = `
"---
defaults:
  done: false
  duration: 30m
title: Weekly Standup
tags:
  - work
date: 2026-04-06
time: 09:00
repeat:
  type: schedule
  freq: weekly
  byweekday:
    - mo
instances:
  - date: 2026-04-13
    done: true
  - date: 2026-04-14
    done: true
  - date: 2026-04-20
    time: 09:00
    excluded: true
---

Quick sync. Agenda:
- [[project-alpha]] status
- Blockers
- [[weekly-log]] updates"
`;

exports[`edit operations → serialized YAML > excludeOccurrence on a series in a mixed file leaves other series and standalone intact 1`] = `
"---
defaults:
  done: false
title: Weekly Sync
tags:
  - work
instances:
  - date: 2026-04-01
    time: 09:00
    repeat:
      type: schedule
      freq: weekly
      byweekday:
        - mo
      end:
        type: until
        date: 2026-05-02
    defaults:
      duration: 30m
    instances:
      - date: 2026-04-08
        time: 09:00
        excluded: true
      - date: 2026-04-08
        time: 10:00
  - date: 2026-05-03
    time: 10:00
    repeat:
      type: schedule
      freq: weekly
      byweekday:
        - fr
    defaults:
      duration: 1h
    instances:
      - date: 2026-05-10
        time: 11:00
  - date: 2026-07-01
    duration: 2d
---"
`;

exports[`edit operations → serialized YAML > future-scope edit splits the series at the occurrence date 1`] = `
"---
defaults:
  done: false
title: Weekly Standup
tags:
  - work
instances:
  - date: 2026-04-06
    time: 09:00
    repeat:
      type: schedule
      freq: weekly
      byweekday:
        - mo
      end:
        type: until
        date: 2026-04-19
    defaults:
      duration: 30m
    instances:
      - date: 2026-04-13
        done: true
      - date: 2026-04-14
        done: true
  - date: 2026-04-20
    time: 09:00
    repeat:
      type: schedule
      freq: weekly
      byweekday:
        - mo
    defaults:
      duration: 15m
---

Quick sync. Agenda:
- [[project-alpha]] status
- Blockers
- [[weekly-log]] updates"
`;

exports[`edit operations → serialized YAML > single-scope edit overrides one occurrence (priority) without touching the series 1`] = `
"---
defaults:
  done: false
  duration: 30m
title: Weekly Standup
tags:
  - work
date: 2026-04-06
time: 09:00
repeat:
  type: schedule
  freq: weekly
  byweekday:
    - mo
instances:
  - date: 2026-04-13
    done: true
  - date: 2026-04-14
    done: true
  - date: 2026-04-20
    time: 09:00
    priority: high
---

Quick sync. Agenda:
- [[project-alpha]] status
- Blockers
- [[weekly-log]] updates"
`;

exports[`edit operations → serialized YAML > single-scope move excludes the original slot and re-adds at the new date 1`] = `
"---
defaults:
  done: false
  duration: 30m
title: Weekly Standup
tags:
  - work
date: 2026-04-06
time: 09:00
repeat:
  type: schedule
  freq: weekly
  byweekday:
    - mo
instances:
  - date: 2026-04-13
    done: true
  - date: 2026-04-14
    done: true
  - date: 2026-04-20
    time: 09:00
    excluded: true
  - date: 2026-04-22
    time: 09:00
---

Quick sync. Agenda:
- [[project-alpha]] status
- Blockers
- [[weekly-log]] updates"
`;

exports[`edit operations → serialized YAML > toggleDone on a generated occurrence adds a done override 1`] = `
"---
defaults:
  done: false
  duration: 30m
title: Weekly Standup
tags:
  - work
date: 2026-04-06
time: 09:00
repeat:
  type: schedule
  freq: weekly
  byweekday:
    - mo
instances:
  - date: 2026-04-13
    done: true
  - date: 2026-04-14
    done: true
  - date: 2026-04-20
    time: 09:00
    done: true
---

Quick sync. Agenda:
- [[project-alpha]] status
- Blockers
- [[weekly-log]] updates"
`;

exports[`edit operations → serialized YAML > toggleDone on generated occurrence from the after_completion series targets series2 1`] = `
"---
defaults:
  done: false
title: Daily Check-in
tags:
  - work
instances:
  - date: 2026-04-01
    repeat:
      type: schedule
      freq: daily
      end:
        type: until
        date: 2026-04-09
    instances:
      - date: 2026-04-05
        done: true
  - date: 2026-04-10
    repeat:
      type: after_completion
      interval: 2 days
    instances:
      - date: 2026-04-10
        done: true
      - date: 2026-04-12
        done: true
---"
`;
